# CommRaT

./: .gitignore  CMakeLists.txt  Doxyfile  PHASE6_STATUS.md  README.md
.github/: copilot-instructions.md
.github/workflows/: doxygen.yml
cmake/: CommRaTConfig.cmake.in
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLEANUP_source_primary_output_type_id.md  CONTRIBUTING.md  DOCUMENTATION_STRATEGY.md  DOCUMENTATION_TODO.md  EXAMPLES.md  FAQ.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  KNOWN_ISSUES.md  MIGRATION_GUIDE.md  README.md  ROADMAP.md  TIMESTAMP_ACCESSOR_STRATEGY.md  USER_GUIDE.md
docs/archive/: ASSESSMENT.md  CLEAN_INTERFACE.md  MAILBOX_DESIGN.md  MODULE_FRAMEWORK.md  MODULE_MODERNIZATION_STRATEGY.md  RUNTIME_VALIDATION.md  ULTRA_CLEAN_INTERFACE.md
docs/examples/: README.md
docs/examples/01_hello_commrat/: CMakeLists.txt  README.md  hello_commrat.cpp
docs/examples/02_multi_output/: CMakeLists.txt  README.md  multi_output_example.cpp
docs/examples/03_multi_input_fusion/: CMakeLists.txt  README.md  multi_input_fusion.cpp
docs/internal/: README.md
docs/internal/design_decisions/: IO_SYNC_STRATEGY.md  RACK_ANALYSIS.md  SERTIAL_RINGBUFFER_REQUEST.md
docs/internal/phase_history/: ARCHITECTURE_ANALYSIS.md  FIXES_APPLIED.md
docs/internal/refactoring/: ARCHITECTURE_REFACTOR_PLAN.md  REGISTRY_MODULE_REFACTORING_COMPLETE.md
docs/work/: ADDRESSING_IMPLEMENTATION_PLAN.md  ARCHITECTURE_ANALYSIS.md  COMMAND_AND_MAILBOX_REFACTOR_PLAN.md  COMPOSER_SYSTEM_PLAN.md  GENERIC_ALGORITHMS.md  INTROSPECTION_INTEGRATION_PLAN.md  LIFECYCLE_SYSTEM.md  LOGGER_REPLAY_PLAN.md  MAILBOX_CLEANUP_DESIGN.md  MODULE_BASE_REFACTORING_PROPOSAL.md  MODULE_TYPE_SYSTEM.md  PARAMETER_SYSTEM.md  PHASE_7.0_MODULE_MAIN_WRAPPER.md  PLATFORM_ABSTRACTION_LAYER.md  RACK_INSPIRED_ADDRESSING.md  REGISTRY_MODULE_REFACTORING.md  SUBSCRIPTION_ADDRESSING_STRATEGY.md  UNIFIED_CONFIG_PROPOSAL.md  WEB_INTERFACE.md
examples/: README.md  clean_interface_example.cpp  command_example.cpp  continuous_input_example.cpp  custom_messages.cpp  introspection_example.cpp  loop_mode_example.cpp  mailbox_example.cpp  module_main_basic.cpp  module_main_multiformat.cpp  module_main_with_config.cpp  multi_output_runtime.cpp  multi_output_sensor_fusion.cpp  receiver.cpp  registry_demo.cpp  sender.cpp  simple_usage.cpp  test_nonblocking.cpp
examples/configs/: filter.json  fusion.json  sensor_basic.json
examples/messages/: README.md  common_messages.hpp  messages.hpp  user_messages.hpp
include/commrat/: commrat.hpp  historical_mailbox.hpp  introspection.hpp  io_spec.hpp  mailbox.hpp  message_helpers.hpp  message_id.hpp  message_registry.hpp  message_service.hpp  messages.hpp  module.hpp  module_main.hpp  registry_mailbox.hpp  registry_module.hpp  subscription_messages.hpp  system_registry.hpp  threading.hpp  timestamp.hpp  timestamped_ring_buffer.hpp  tims_wrapper.hpp
include/commrat/introspection/: introspection_helper.hpp  message_schema.hpp
include/commrat/mailbox/: historical_mailbox.hpp  mailbox.hpp  mailbox_type.hpp  registry_mailbox.hpp  timestamped_ring_buffer.hpp  typed_mailbox.hpp
include/commrat/messaging/: message_helpers.hpp  message_registry.hpp
include/commrat/messaging/system/: subscription_messages.hpp  system_registry.hpp
include/commrat/module/: io_spec.hpp  lifecycle_manager.hpp  mailbox_infrastructure_builder.hpp  mailbox_set.hpp  module_config.hpp  module_core.hpp  module_mixins.hpp  module_services.hpp  publishing.hpp  subscription.hpp  work_loop_handler.hpp
include/commrat/module/base/: module_base_selector.hpp  noinput_multi_base.hpp  noinput_single_base.hpp  singleinput_multi_base.hpp  singleinput_single_base.hpp
include/commrat/module/helpers/: address_helpers.hpp  tims_helpers.hpp  type_name.hpp
include/commrat/module/io/: input_infrastructure.hpp  input_processor.hpp  io_spec.hpp  io_traits.hpp  module_input.hpp  module_output.hpp  multi_input_infrastructure.hpp  multi_input_processor.hpp  multi_output_manager.hpp  output_infrastructure.hpp
include/commrat/module/io/config/: input_config.hpp  module_config_generator.hpp  output_config.hpp
include/commrat/module/io/input/: cmd_input.hpp  continuous_input.hpp  synced_input.hpp
include/commrat/module/io/output/: buffered_output.hpp
include/commrat/module/lifecycle/: command_dispatcher.hpp  lifecycle_manager.hpp  loop_executor.hpp
include/commrat/module/loops/: loop_executor.hpp
include/commrat/module/mailbox/: mailbox_infrastructure_builder.hpp  mailbox_set.hpp
include/commrat/module/metadata/: input_metadata.hpp  input_metadata_accessors.hpp  input_metadata_manager.hpp
include/commrat/module/services/: publishing.hpp  subscription.hpp
include/commrat/module/traits/: module_types.hpp  multi_input_resolver.hpp  processor_bases.hpp  type_extraction.hpp
include/commrat/platform/: threading.hpp  timestamp.hpp  tims_wrapper.hpp
src/: message_service.cpp  tims_wrapper.cpp
test/: run_continuous_example.sh  run_module_main_example.sh  test_3input_fusion.cpp  test_address_collisions.cpp  test_config_generator.cpp  test_historical_mailbox.cpp  test_io_spec.cpp  test_mailbox_sizing.cpp  test_multi_input.cpp  test_multi_input_compilation.cpp  test_multi_input_module.cpp  test_multi_output.cpp  test_new_module_arch.cpp  test_primary_input.cpp  test_process_signature.cpp  test_receiver.cpp  test_sender.cpp  test_timestamp_logic.cpp  test_timestamped_ring_buffer.cpp  test_type_name.cpp  test_typed_mailbox.cpp
